[gd_scene load_steps=3 format=3 uid="uid://bprnsq2fqlj3p"]

[ext_resource type="Script" path="res://Content/UI/MainMenu/settings.gd" id="1_fyvpb"]
[ext_resource type="Script" path="res://Content/UI/Pause/VolumeSlider.gd" id="2_ai5j1"]

[node name="MenuBar" type="TabContainer"]
custom_minimum_size = Vector2(1000, 600)
offset_right = 1000.0
offset_bottom = 600.0
script = ExtResource("1_fyvpb")

[node name="GENERAL_TAB" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="GENERAL_TAB"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GENERAL_TAB/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label3" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "GENERAL_LABEL"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "LANGUAGE_LABEL"

[node name="OptionButtonLang" type="OptionButton" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "ENGLISH"
popup/item_0/id = 0
popup/item_1/text = "EESTI"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "INDOOR_SETTINGS_LABEL"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CAMERA_SENS_X_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="3DsensXlabel" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="3DsensX" type="HSlider" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "CAMERA_SENS_Y_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="3DsensYlabel" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="3DsensY" type="HSlider" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "OUTDOOR_SETTINGS_LABEL"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "CAMERA_MOVE_SENS_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="2Dmovelabel" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="2Dmovesens" type="HSlider" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.1

[node name="HBoxContainer4" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "CAMERA_ROT_SENS_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="2Drotlabel" type="Label" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="2Drotsens" type="HSlider" parent="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.1

[node name="AUDIO_TAB" type="MarginContainer" parent="."]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="AUDIO_TAB"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="AUDIO_TAB/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Master2" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GAME_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="Master" type="HSlider" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.001
script = ExtResource("2_ai5j1")
bus_name = "Master"

[node name="HBoxContainer2" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Music2" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "MUSIC_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="Music" type="HSlider" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.001
script = ExtResource("2_ai5j1")
bus_name = "music"

[node name="HBoxContainer3" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SFX2" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="SFX" type="HSlider" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.001
script = ExtResource("2_ai5j1")
bus_name = "sfx"

[node name="HBoxContainer4" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dialogue2" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "DIALOGUE_LABEL"

[node name="HBoxContainer" type="HBoxContainer" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="Dialogue" type="HSlider" parent="AUDIO_TAB/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.001
script = ExtResource("2_ai5j1")
bus_name = "dialogue"

[connection signal="item_selected" from="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer5/OptionButtonLang" to="." method="language_select"]
[connection signal="value_changed" from="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer/3DsensX" to="." method="indoor_sens_x"]
[connection signal="value_changed" from="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer/3DsensY" to="." method="indoor_sens_y"]
[connection signal="value_changed" from="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer/2Dmovesens" to="." method="outdoor_sens_move"]
[connection signal="value_changed" from="GENERAL_TAB/ScrollContainer/VBoxContainer/HBoxContainer4/HBoxContainer/2Drotsens" to="." method="outdoor_sens_rot"]
